# image_processor

image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/Image/: color.cpp  color.h  image.cpp  image.h
image_processor/Write_and_Read/: magic_const.h  read.cpp  read.h  write.cpp  write.h
